--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -6,5 +6,38 @@
     "Contact": "اتصل بنا",
     "FAQ": "الأسئلة الشائعة",
     "Order Now": "اطلب الآن",
-    "Browse Menu": "تصفح القائمة"
+    "Browse Menu": "تصفح القائمة",
+    "Our Menu": "قائمتنا",
+    "Your Cart": "سلة التسوق",
+    "Add": "إضافة",
+    "Add to Cart": "أضف إلى السلة",
+    "Product added to cart!": "تمت إضافة المنتج إلى السلة!",
+    "Failed to add product to cart. Please try again.": "فشلت إضافة المنتج إلى السلة. يرجى المحاولة مرة أخرى.",
+    "Select Option": "اختر الخيار",
+    "Quantity": "الكمية",
+    "Cancel": "إلغاء",
+    "No products found in this category.": "لا توجد منتجات في هذه الفئة.",
+    "Sale": "تخفيض",
+    "Your cart is empty": "سلة التسوق فارغة",
+    "Looks like you haven't added anything to your cart yet.": "يبدو أنك لم تضف أي شيء إلى سلة التسوق حتى الآن.",
+    "Image": "الصورة",
+    "Product": "المنتج",
+    "Price": "السعر",
+    "Quantity": "الكمية",
+    "Total": "الإجمالي",
+    "Clear Cart": "تفريغ السلة",
+    "Proceed to Checkout": "إتمام الشراء",
+    "Item removed from cart.": "تمت إزالة المنتج من السلة.",
+    "Cart has been cleared.": "تم تفريغ السلة.",
+    "Checkout": "إتمام الشراء",
+    "Order Summary": "ملخص الطلب",
+    "Delivery Address": "عنوان التوصيل",
+    "Payment Method": "طريقة الدفع",
+    "Cash on Delivery": "الدفع عند الاستلام",
+    "Credit Card": "بطاقة ائتمان",
+    "Place Order": "إرسال الطلب",
+    "Order Confirmation": "تأكيد الطلب",
+    "Thank you for your order!": "شكرا لطلبك!",
+    "Your order has been received and is now being processed.": "تم استلام طلبك وجاري معالجته الآن.",
+    "Order Number": "رقم الطلب"
 }
