--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -6,5 +6,37 @@
     "Contact": "Contact",
     "FAQ": "FAQ",
     "Order Now": "Order Now",
-    "Browse Menu": "Browse Menu"
+    "Browse Menu": "Browse Menu",
+    "Our Menu": "Our Menu",
+    "Your Cart": "Your Cart",
+    "Add": "Add",
+    "Add to Cart": "Add to Cart",
+    "Product added to cart!": "Product added to cart!",
+    "Failed to add product to cart. Please try again.": "Failed to add product to cart. Please try again.",
+    "Select Option": "Select Option",
+    "Quantity": "Quantity",
+    "Cancel": "Cancel",
+    "No products found in this category.": "No products found in this category.",
+    "Sale": "Sale",
+    "Your cart is empty": "Your cart is empty",
+    "Looks like you haven't added anything to your cart yet.": "Looks like you haven't added anything to your cart yet.",
+    "Image": "Image",
+    "Product": "Product",
+    "Price": "Price",
+    "Total": "Total",
+    "Clear Cart": "Clear Cart",
+    "Proceed to Checkout": "Proceed to Checkout",
+    "Item removed from cart.": "Item removed from cart.",
+    "Cart has been cleared.": "Cart has been cleared.",
+    "Checkout": "Checkout",
+    "Order Summary": "Order Summary",
+    "Delivery Address": "Delivery Address",
+    "Payment Method": "Payment Method",
+    "Cash on Delivery": "Cash on Delivery",
+    "Credit Card": "Credit Card",
+    "Place Order": "Place Order",
+    "Order Confirmation": "Order Confirmation",
+    "Thank you for your order!": "Thank you for your order!",
+    "Your order has been received and is now being processed.": "Your order has been received and is now being processed.",
+    "Order Number": "Order Number"
 }
