--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -23,7 +23,6 @@
     "Image": "الصورة",
     "Product": "المنتج",
     "Price": "السعر",
-    "Quantity": "الكمية",
     "Total": "الإجمالي",
     "Clear Cart": "تفريغ السلة",
     "Proceed to Checkout": "إتمام الشراء",
@@ -39,5 +38,39 @@
     "Order Confirmation": "تأكيد الطلب",
     "Thank you for your order!": "شكرا لطلبك!",
     "Your order has been received and is now being processed.": "تم استلام طلبك وجاري معالجته الآن.",
-    "Order Number": "رقم الطلب"
+    "Order Number": "رقم الطلب",
+    "Delivery Information": "معلومات التوصيل",
+    "First Name": "الاسم الأول",
+    "Last Name": "الاسم الأخير",
+    "Email Address": "البريد الإلكتروني",
+    "Phone Number": "رقم الهاتف",
+    "Order Notes": "ملاحظات الطلب",
+    "Subtotal": "المجموع الفرعي",
+    "Delivery Fee": "رسوم التوصيل",
+    "Secure Payment": "دفع آمن",
+    "Fast Delivery": "توصيل سريع",
+    "Easy Returns": "سهولة الإرجاع",
+    "What happens next?": "ماذا يحدث بعد ذلك؟",
+    "Order Preparation": "تحضير الطلب",
+    "Our chefs are preparing your delicious meal with care.": "طهاتنا يقومون بتحضير وجبتك اللذيذة بعناية.",
+    "Packaging": "التغليف",
+    "Your order will be carefully packaged to maintain its quality and temperature.": "سيتم تغليف طلبك بعناية للحفاظ على جودته ودرجة حرارته.",
+    "Delivery": "التوصيل",
+    "Our delivery driver will bring your order to your doorstep.": "سيقوم سائق التوصيل لدينا بإحضار طلبك إلى باب منزلك.",
+    "Continue Shopping": "مواصلة التسوق",
+    "Your cart is empty. Please add items before checkout.": "سلة التسوق فارغة. يرجى إضافة منتجات قبل إتمام الشراء.",
+    "Cart updated successfully.": "تم تحديث السلة بنجاح.",
+    "View all items": "عرض جميع العناصر",
+    "View Cart": "عرض السلة",
+    "Quick Cart": "عربة التسوق السريعة",
+    "Cart Items": "محتويات السلة",
+    "Items": "منتجات",
+    "Item": "منتج",
+    "Your order has been placed successfully!": "تم تقديم طلبك بنجاح!",
+    "Delicious food delivered to your doorstep. Our restaurant offers a variety of dishes made with fresh ingredients.": "طعام لذيذ يصل إلى باب منزلك. يقدم مطعمنا مجموعة متنوعة من الأطباق المصنوعة من مكونات طازجة.",
+    "Quick Links": "روابط سريعة",
+    "Contact Us": "اتصل بنا",
+    "1234 Street Name, City Name": "1234 اسم الشارع، اسم المدينة",
+    "Open: 10:00 AM - 11:00 PM": "مفتوح: 10:00 صباحًا - 11:00 مساءً",
+    "Cloud Restaurant. All rights reserved.": "مطعم كلاود. جميع الحقوق محفوظة."
 }
