--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -38,5 +38,39 @@
     "Order Confirmation": "Order Confirmation",
     "Thank you for your order!": "Thank you for your order!",
     "Your order has been received and is now being processed.": "Your order has been received and is now being processed.",
-    "Order Number": "Order Number"
+    "Order Number": "Order Number",
+    "Delivery Information": "Delivery Information",
+    "First Name": "First Name",
+    "Last Name": "Last Name",
+    "Email Address": "Email Address",
+    "Phone Number": "Phone Number",
+    "Order Notes": "Order Notes",
+    "Subtotal": "Subtotal",
+    "Delivery Fee": "Delivery Fee",
+    "Secure Payment": "Secure Payment",
+    "Fast Delivery": "Fast Delivery",
+    "Easy Returns": "Easy Returns",
+    "What happens next?": "What happens next?",
+    "Order Preparation": "Order Preparation",
+    "Our chefs are preparing your delicious meal with care.": "Our chefs are preparing your delicious meal with care.",
+    "Packaging": "Packaging",
+    "Your order will be carefully packaged to maintain its quality and temperature.": "Your order will be carefully packaged to maintain its quality and temperature.",
+    "Delivery": "Delivery",
+    "Our delivery driver will bring your order to your doorstep.": "Our delivery driver will bring your order to your doorstep.",
+    "Continue Shopping": "Continue Shopping",
+    "Your cart is empty. Please add items before checkout.": "Your cart is empty. Please add items before checkout.",
+    "Cart updated successfully.": "Cart updated successfully.",
+    "View all items": "View all items",
+    "View Cart": "View Cart",
+    "Quick Cart": "Quick Cart",
+    "Cart Items": "Cart Items",
+    "Items": "Items",
+    "Item": "Item",
+    "Your order has been placed successfully!": "Your order has been placed successfully!",
+    "Delicious food delivered to your doorstep. Our restaurant offers a variety of dishes made with fresh ingredients.": "Delicious food delivered to your doorstep. Our restaurant offers a variety of dishes made with fresh ingredients.",
+    "Quick Links": "Quick Links",
+    "Contact Us": "Contact Us",
+    "1234 Street Name, City Name": "1234 Street Name, City Name",
+    "Open: 10:00 AM - 11:00 PM": "Open: 10:00 AM - 11:00 PM",
+    "Cloud Restaurant. All rights reserved.": "Cloud Restaurant. All rights reserved."
 }
